In machine_learning_template.ipynb: Add blue box for all section headers in sections Introduction, Setup, and Data Loading and Inspection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -42,7 +42,9 @@
    "id": "cbf7c4ae-408e-4aeb-9fe9-e20263d2ac7f",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Introduction</h1>\n",
+    "</div> "
    ]
   },
   {
@@ -50,7 +52,9 @@
    "id": "553068ba-3fd3-4de9-8fe7-47c03d4f9c79",
    "metadata": {},
    "source": [
-    "## Template Overview"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Template Overview</h2>\n",
+    "</div> "
    ]
   },
   {
@@ -81,7 +85,9 @@
    "id": "e4138c51-6c52-44fc-887b-60b40faed00e",
    "metadata": {},
    "source": [
-    "## Project Overview  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Project Overview</h2>\n",
+    "</div> \n",
     "\n",
     "**Example: Predicting Rental Prices**  \n",
     "This is an illustrative example of a project overview designed to help you write your own. \n",
@@ -162,7 +168,9 @@
    "id": "9f9288e0-3815-4c47-94c3-33d0a6aafc8e",
    "metadata": {},
    "source": [
-    "# Setup "
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Setup</h1>\n",
+    "</div> "
    ]
   },
   {
@@ -170,7 +178,9 @@
    "id": "00680c12-3986-4262-9d6d-e330b55fd079",
    "metadata": {},
    "source": [
-    "## Imports"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Imports</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -204,7 +214,10 @@
    "id": "4bb4caf6-1eef-4d0e-a40b-9878e1b82301",
    "metadata": {},
    "source": [
-    "## Environment Variables \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Environment Variables</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>🔒 Security Note:</strong> Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a <code>.env</code> file. Using environment variables helps keep such information secure and separate from your codebase.\n",
     "</div>"
@@ -237,7 +250,9 @@
    "id": "2c93f5c7-8968-4a0e-907f-a6bc60d0dd3d",
    "metadata": {},
    "source": [
-    "# Data Loading and Inspection"
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Data Loading and Inspection</h1>\n",
+    "</div>"
    ]
   },
   {
@@ -245,7 +260,10 @@
    "id": "e759d1c8-d6c7-4cc0-96fe-43ca5703d6c4",
    "metadata": {},
    "source": [
-    "## CSV \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">CSV</h2>\n",
+    "</div>  \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Load data from a <code>.csv</code> file into a Pandas DataFrame.\n",
     "</div>"
@@ -278,7 +296,10 @@
    "id": "b63482d3-000f-4235-a16a-51d6d8a08dba",
    "metadata": {},
    "source": [
-    "## MySQL\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">MySQL</h2>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Load data from a MySQL database table into a Pandas DataFrame.\n",
     "</div>"
@@ -321,7 +342,10 @@
    "id": "52d7809f-dd55-4350-a52d-7c20c761a102",
    "metadata": {},
    "source": [
-    "## Initial Data Inspection  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Initial Data Inspection</h2>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Basic exploration of the dataset to understand its structure and detect obvious issues.\n",
     "</div>"
@@ -354,7 +378,9 @@
    "id": "7aad1422-e239-4d5d-b6e4-31661d8050be",
    "metadata": {},
    "source": [
-    "# Data Preprocessing"
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Data Preprocessing</h1>\n",
+    "</div> "
    ]
   },
   {
@@ -1668,7 +1694,9 @@
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis (EDA)"
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Exploratory Data Analysis (EDA)</h1>\n",
+    "</div>"
    ]
   },
   {
@@ -4419,7 +4447,10 @@
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
-    "# Modeling (Classification)  \n",
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Modeling (Classification)</h1>\n",
+    "</div> \n",
+    "\n",
     "ℹ️ For a classification problem, where the task is to predict a categorical target variable."
    ]
   },
@@ -6029,7 +6060,9 @@
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
-    "# Summary"
+    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
+    "    <h1 style=\"margin:0px\">Summary</h1>\n",
+    "</div>"
    ]
   },
   {
