In machine_learning_template.ipynb > Data Preprocessing section: Add blue box for all section headers using html and css

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -388,7 +388,9 @@
    "id": "16f47028-71ec-4f00-b5f8-9de8fbd5d9b5",
    "metadata": {},
    "source": [
-    "## Standardizing Names and Labels"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Standardizing Names and Labels</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -460,7 +462,9 @@
    "id": "619f1a0d-a98f-4446-8d44-d7e553e6230f",
    "metadata": {},
    "source": [
-    "## Handling Duplicates"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Handling Duplicates</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -564,7 +568,9 @@
    "id": "eb28c409-34a3-493f-8cd9-856b5c25e0d3",
    "metadata": {},
    "source": [
-    "## Handling Data Types"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Handling Data Types</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -647,7 +653,10 @@
    "id": "9116c8e3-2bcf-4843-bdd8-df3d1d920f6d",
    "metadata": {},
    "source": [
-    "## Train-Validation-Test Split  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Train-Validation-Test Split</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ The ideal split depends on the dataset size and the task. A general guideline is:\n",
     "    <table style=\"margin-left:0; margin-top:15px; border-collapse: collapse;\">\n",
@@ -712,7 +721,9 @@
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
-    "## Engineering New Features "
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Engineering New Features</h2>\n",
+    "</div> "
    ]
   },
   {
@@ -720,7 +731,10 @@
    "id": "285a8b2b-ba41-4074-812a-045f4a05ecab",
    "metadata": {},
    "source": [
-    "### From Raw Text\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">From Raw Text</h3>\n",
+    "</div>\n",
+    "\n",
     "Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings."
    ]
   },
@@ -840,7 +854,10 @@
    "id": "10a7e6a1-82f2-4d28-9370-289ebd6eb7b8",
    "metadata": {},
    "source": [
-    "### From Categorical Text\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">From Categorical Text</h3>\n",
+    "</div>\n",
+    "\n",
     "Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings."
    ]
   },
@@ -929,7 +946,10 @@
    "id": "416056c2-ce84-4a88-902e-42ac63b4b96b",
    "metadata": {},
    "source": [
-    "## Defining Semantic Type\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Engineering New Features</h2>\n",
+    "</div> \n",
+    "\n",
     "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
    ]
   },
@@ -1001,7 +1021,9 @@
    "id": "6cc4d1a9-db9b-4e28-ba65-986831dd8b38",
    "metadata": {},
    "source": [
-    "## Handling Missing Values"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Handling Missing Values</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -1166,7 +1188,9 @@
    "id": "00e082e3-b3ab-4c7b-932b-339610614132",
    "metadata": {},
    "source": [
-    "## Handling Outliers"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Handling Outliers</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -1185,7 +1209,10 @@
    "id": "e5625577-0d32-402f-bac1-1d4184d765c6",
    "metadata": {},
    "source": [
-    "### 3SD Method  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">3SD Method</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and remove univariate outliers in numerical columns by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column. \n",
     "</div>"
@@ -1276,7 +1303,10 @@
    "id": "3a030d86-a4da-4b67-bd83-11dcc2af33ec",
    "metadata": {},
    "source": [
-    "### 1.5 IQR Method  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">1.5 IQR Method</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and remove univariate outliers in numerical columns using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column. \n",
     "</div>"
@@ -1368,7 +1398,10 @@
    "id": "0faa22ef-8cb3-4db1-9757-faef72f78355",
    "metadata": {},
    "source": [
-    "### Isolation Forest\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Isolation Forest</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and remove multivariate outliers using the isolation forest algorithm.\n",
     "</div>"
@@ -1445,7 +1478,10 @@
    "id": "db5d2469-461b-4f5a-a335-8004df91637f",
    "metadata": {},
    "source": [
-    "## Feature Scaling and Encoding  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Feature Scaling and Encoding</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Use a <code>ColumnTransformer</code> to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.\n",
     "    <ul>\n",
@@ -1515,7 +1551,10 @@
    "id": "6d499010-799d-4bec-9a7a-12e6812dbe17",
    "metadata": {},
    "source": [
-    "## Polynomial Features  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Polynomial Features</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Create polynomial features in combination with feature scaling and encoding. Use a <code>ColumnTransformer</code> to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step. \n",
     "    <ul>\n",
@@ -1602,7 +1641,9 @@
    "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
    "metadata": {},
    "source": [
-    "## Saving Data"
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Saving Data</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -1610,7 +1651,10 @@
    "id": "951fa5b4-8784-4081-9de8-dc83de39533d",
    "metadata": {},
    "source": [
-    "### CSV  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">CSV</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Save preprocessed data from a Pandas DataFrame to a <code>.csv</code> file in the <code>data</code> directory.\n",
     "</div>"
@@ -1645,7 +1689,10 @@
    "id": "96bad71b-409a-405e-945d-a0b3a30bbebf",
    "metadata": {},
    "source": [
-    "### MySQL  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">MySQL</h3>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Save preprocessed data from a Pandas DataFrame to a MySQL database table. <br><br>\n",
     "    🔒 Make sure <code>sql_username</code> and <code>sql_password</code> were imported as environment variables.\n",
