In machine_learning_template.ipynb > EDA section: Add blue box for all section headers using html and css

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1751,7 +1751,10 @@
    "id": "959b0e23-3001-433d-a0fe-9d3d0c040fe6",
    "metadata": {},
    "source": [
-    "## Univariate EDA  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Univariate EDA</h2>\n",
+    "</div>\n",
+    "\n",
     "Analyze the distribution of a single column using descriptive statistics and visualizations."
    ]
   },
@@ -1760,7 +1763,10 @@
    "id": "0cdb6cb0-f661-4be4-b0b5-bb6f0ba46fee",
    "metadata": {},
    "source": [
-    "### Numerical Columns  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Numerical Columns</h3>\n",
+    "</div> \n",
+    "\n",
     "Examine descriptive statistics (e.g., mean, median, standard deviation) and visualize the distributions (e.g., histograms) of numerical columns."
    ]
   },
@@ -1873,7 +1879,10 @@
    "id": "c01f9891-a8ab-4a10-9351-2be2e20a1e8e",
    "metadata": {},
    "source": [
-    "### Categorical Columns  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Categorical Columns</h3>\n",
+    "</div> \n",
+    "\n",
     "Examine descriptive statistics (absolute and relative frequencies) and visualize the distributions (e.g., bar plots) of categorical columns."
    ]
   },
@@ -2074,7 +2083,10 @@
    "id": "9895c96c-daff-4873-852d-615627e17dcb",
    "metadata": {},
    "source": [
-    "## Bivariate EDA  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Bivariate EDA</h2>\n",
+    "</div> \n",
+    "\n",
     "Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots."
    ]
   },
@@ -2083,7 +2095,10 @@
    "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
    "metadata": {},
    "source": [
-    "### Numerical x Numerical  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Numerical x Numerical</h3>\n",
+    "</div> \n",
+    "\n",
     "Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots."
    ]
   },
@@ -2092,7 +2107,9 @@
    "id": "05bed553-89be-4154-9775-d784adfc100f",
    "metadata": {},
    "source": [
-    "#### Correlations"
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Correlations</h4>\n",
+    "</div> "
    ]
   },
   {
@@ -2178,7 +2195,9 @@
    "id": "54741433-1f70-4248-982e-318bba474e15",
    "metadata": {},
    "source": [
-    "#### Visualize Relationships"
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
+    "</div>"
    ]
   },
   {
@@ -2277,7 +2296,10 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical x Categorical  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Numerical x Categorical</h3>\n",
+    "</div> \n",
+    "\n",
     "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots."
    ]
   },
@@ -2286,7 +2308,10 @@
    "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
    "metadata": {},
    "source": [
-    "#### Group-Wise Statistics \n",
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Group-Wise Statistics</h4>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Group-wise statistics of a single numerical column.\n",
     "</div>"
@@ -2371,7 +2396,9 @@
    "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
    "metadata": {},
    "source": [
-    "#### Visualize Relationships"
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
+    "</div>"
    ]
   },
   {
@@ -2493,7 +2520,10 @@
    "id": "f5a9ea87-8c72-4975-b86c-e3747dad9d51",
    "metadata": {},
    "source": [
-    "### Categorical x Categorical\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Categorical x Categorical</h3>\n",
+    "</div>\n",
+    "\n",
     "Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots."
    ]
   },
@@ -2502,7 +2532,9 @@
    "id": "af880d65-3f35-4493-8c25-eadd5a65217f",
    "metadata": {},
    "source": [
-    "#### Contingency Tables"
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Contingency Tables</h4>\n",
+    "</div>"
    ]
   },
   {
@@ -2590,7 +2622,9 @@
    "id": "7b9f0aa9-d935-47cb-934c-7c42249fc423",
    "metadata": {},
    "source": [
-    "#### Visualize Relationships"
+    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
+    "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
+    "</div>"
    ]
   },
   {
