In machine_learning_template.ipynb: Add blue box for all section headers in Modeling (Classification) section and Summary section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -17,28 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695ebdf5-40f4-4ff7-93d9-204e1eca57f8",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
-    "    <h1 style=\"margin:0px\">Your H1 Title</h1>\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
-    "    <h2 style=\"margin:0px\">Your H2 Title</h2>\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Your H3 Title</h3>\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
-    "    <h4 style=\"margin:0px\">Your H4 Title</h4>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cbf7c4ae-408e-4aeb-9fe9-e20263d2ac7f",
    "metadata": {},
    "source": [
@@ -4540,7 +4518,9 @@
    "id": "3da39af8-e1d1-4b70-b9e6-ba118f7aa2c6",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Individually) "
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Training Baseline Models (Individually)</h2>\n",
+    "</div>"
    ]
   },
   {
@@ -4548,7 +4528,10 @@
    "id": "247644a8-58d7-400e-9af3-424000bc40b1",
    "metadata": {},
    "source": [
-    "### Logistic Regression  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Logistic Regression</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -4636,7 +4619,10 @@
    "id": "7542943a-7fb5-4a3b-992c-f64a573c460c",
    "metadata": {},
    "source": [
-    "### Elastic Net Logistic Regression  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Elastic Net Logistic Regression</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Note: Uses the same <code>LogisticRegression</code> class and hyperparameters as the standard Logistic Regression, with the key difference being the hyperparameter values for the Elastic Net regularization. Specifically, the <code>penalty</code> is set to <code>\"elasticnet\"</code>, and the solver should be <code>\"saga\"</code>. The <code>l1_ratio</code> parameter controls the mix between L1 and L2 regularization.\n",
     "    <ul>\n",
@@ -4695,7 +4681,10 @@
    "id": "a3f3230b-cc4f-4c09-b90d-3864e8290020",
    "metadata": {},
    "source": [
-    "### K-Nearest Neighbors Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">K-Nearest Neighbors Classifier</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -4771,7 +4760,10 @@
    "id": "5037100c-4731-4ff0-910c-40af7e3ed7ed",
    "metadata": {},
    "source": [
-    "### Support Vector Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Support Vector Classifier </h3>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -4833,7 +4825,10 @@
    "id": "a9e73410-c839-4c55-a72b-945b7fe4e946",
    "metadata": {},
    "source": [
-    "### Decision Tree Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Decision Tree Classifier</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -4916,7 +4911,10 @@
    "id": "74fdebd2-ac62-49d0-b58d-822b8bbb0520",
    "metadata": {},
    "source": [
-    "### Random Forest Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Random Forest Classifier</h3>\n",
+    "</div>   \n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -4999,7 +4997,10 @@
    "id": "dd1cd93f-ceb6-4d79-ba93-5b0136a3c338",
    "metadata": {},
    "source": [
-    "### Multi-Layer Perceptron Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Multi-Layer Perceptron Classifier</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -5091,7 +5092,10 @@
    "id": "cf0adddc-d466-4681-adac-82082da7ad7f",
    "metadata": {},
    "source": [
-    "### XGBoost Classifier  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">XGBoost Classifier</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ Hyperparameters and Default Values:\n",
     "    <ul>\n",
@@ -5185,7 +5189,10 @@
    "id": "ae894ad4-b6fd-49da-813c-933be2653b0d",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Pipeline)\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Training Baseline Models (Pipeline)</h2>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Train 8 baseline models:  \n",
     "    <ul>\n",
@@ -5273,7 +5280,10 @@
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
-    "## Hyperparameter Tuning  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Hyperparameter Tuning</h2>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
     "    💡 Example: The following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1-score on the validation data and were selected for hyperparameter tuning:  \n",
@@ -5291,7 +5301,10 @@
    "id": "8d815b8d-fa8a-43bd-86a3-82f43e18968d",
    "metadata": {},
    "source": [
-    "### Grid Search  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Grid Search</h3>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
     "    ℹ️ Hyperparameters:  \n",
     "    <ul>  \n",
@@ -5485,7 +5498,10 @@
    "id": "3c74d32e-a558-4314-9099-2804be9c4c79",
    "metadata": {},
    "source": [
-    "### Randomized Search  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Randomized Search</h3>\n",
+    "</div> \n",
+    "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
     "    ℹ️ Hyperparameters:  \n",
     "    <ul>  \n",
@@ -5695,7 +5711,10 @@
    "id": "2a50d413-ace8-4005-b273-cae892faad54",
    "metadata": {},
    "source": [
-    "## Final Model  \n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
+    "    <h2 style=\"margin:0px\">Final Model</h2>\n",
+    "</div>\n",
+    "\n",
     "Based on hyperparameter tuning, the following model achieved the best performance (e.g., accuracy = 0.92) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.\n",
     "\n",
     "Example final model: XGBoost Classifier    \n",
@@ -5715,7 +5734,9 @@
    "id": "66e3ea9b-9d33-4bb8-851c-645471bb427d",
    "metadata": {},
    "source": [
-    "### Training Final Model"
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Training Final Model</h3>\n",
+    "</div>"
    ]
   },
   {
@@ -5746,7 +5767,9 @@
    "id": "4f4906c4-3902-4059-9613-e273e834f4b5",
    "metadata": {},
    "source": [
-    "### Model Evaluation"
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Model Evaluation</h3>\n",
+    "</div> "
    ]
   },
   {
@@ -5900,7 +5923,9 @@
    "id": "5e63402e-85d3-445c-be3c-074f350a97fc",
    "metadata": {},
    "source": [
-    "### Feature Importance "
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Feature Importance</h3>\n",
+    "</div> "
    ]
   },
   {
@@ -6034,7 +6059,10 @@
    "id": "c85c6066-c4f9-4e17-b0f1-30ca3d71ce06",
    "metadata": {},
    "source": [
-    "### Model Prediction Examples\n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Model Prediction Examples</h3>\n",
+    "</div>\n",
+    "\n",
     "Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.  \n",
     "- Goal: Give stakeholders a clear picture of when the model performs well and when it struggles. \n",
     "- Recommendations: \n",
@@ -6101,7 +6129,10 @@
    "id": "8dcc2ed5-4d97-478f-ac1b-725a6de4fbd1",
    "metadata": {},
    "source": [
-    "### Saving Model  \n",
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Saving Model</h3>\n",
+    "</div>\n",
+    "\n",
     "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
    ]
   },
@@ -6151,7 +6182,10 @@
    "id": "b27ae0de-8df6-4a3a-8c2e-404e167fe1ab",
    "metadata": {},
    "source": [
-    "## Data Preprocessing\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
+    "    <h2 style=\"margin:0px\">Data Preprocessing</h2>\n",
+    "</div> \n",
+    "\n",
     "Use `pandas`, `sklearn`, `sqlalchemy`, and `mysql-connector-python` for data loading, cleaning, transformation, and saving.\n",
     "- **Load data**:\n",
     "    - From a .csv file using `pandas` `read_csv`.\n",
@@ -6183,7 +6217,10 @@
     "        - Ordinal features: Use ordinal encoding with `sklearn` `OrdinalEncoder`.\n",
     "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`.\n",
     "\n",
-    "## Exploratory Data Analysis (EDA)\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
+    "    <h2 style=\"margin:0px\">Exploratory Data Analysis (EDA)</h2>\n",
+    "</div> \n",
+    "\n",
     "Use `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
     "- **Univariate EDA**:\n",
     "    - **Numerical columns**:\n",
@@ -6200,7 +6237,10 @@
     "        - Explore relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
     "        - Visualize results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
     "\n",
-    "## Modeling\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
+    "    <h2 style=\"margin:0px\">Modeling</h2>\n",
+    "</div> \n",
+    "\n",
     "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
     "- **Train baseline models**:\n",
     "    - Establish performance benchmarks with the following models using `sklearn` and `xgboost`: Linear Regression, Logistic Regression, Elastic Net Regression, K-Nearest Neighbors, Support Vector Machine, Decision Tree, Random Forest, Multi-Layer Perceptron, and XGBoost.\n",
@@ -6221,7 +6261,10 @@
     "- **Save the final model**:\n",
     "    - Save the best-performing model as a .pkl file using `pickle`.\n",
     "\n",
-    "## Next Steps\n",
+    "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
+    "    <h2 style=\"margin:0px\">Next Steps</h2>\n",
+    "</div> \n",
+    "\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Add model deployment as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
